--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,7 @@
 	url = https://github.com/psychoinformatics-de/studyforrest-data-structural.git
 	datalad-id = 1882e2e6-fbbf-4ade-a65f-3a1615235f51
 	datalad-url = https://github.com/psychoinformatics-de/studyforrest-data-structural.git
+[submodule "derivatives"]
+	path = derivatives
+	url = ./derivatives
+	datalad-id = 05a8bbd5-1c66-4ee3-9e4f-b9a4e229eabe
